# mailadler

./: CMakeLists.txt  CSV_AUTO_EXPORT_IMPORT.md  DESIGN_STRATEGIE.md  EINFACHE_UEBERSETZUNG.md  EMAIL_UEBERSETZUNG_FEATURE.md  ERWEITERTE_FEATURES.md  FINAL_ROADMAP.md  INTERNATIONALISIERUNG.md  LM_STUDIO_WORKFLOW.md  LOKALES_LLM_UEBERSETZUNG.md  PHASE4_CLEANUP_COMPLETE.md  PHASE_B_PLANNING.md  PHASE_B_PLANUNG.md  PRAKTISCHE_FEATURES.md  PROJEKT_MANAGEMENT_SYSTEM.md  README.md  SICHERHEIT_VERSCHLUESSELUNG.md  TELEMETRIE_FEHLERBERICHTERSTATTUNG.md  TESTING_PLAN.md  UEBERSETZUNGS_OPTIONEN.md
.github/workflows/: build-linux-arm64.yml  build-linux.yml  build-linux_arm64.yml  build-macos.yml  build-windows.yml  check-code-format.yml
build_minimal/mailadler_autogen/: deps  mocs_compilation.cpp
build_minimal/mailadler_autogen/EWIEGA46WW/: moc_accountsettings.cpp.d  moc_imapconnection.cpp.d
build_minimal/mailadler_autogen/include/: main.moc.d
docs/: PI_RUNNER_SETUP.md
scripts/: format-code.ps1
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  util.cpp
src/widgets/: openglvideowidget.h  timelinepropertieswidget.ui
src_minimal/: CMakeLists.txt  accountsettings.cpp  accountsettings.h  imapconnection.cpp  imapconnection.h  main.cpp
translations/: CMakeLists.txt  shotcut_ga.ts
